syntax = "proto3";

package alarmservice;

option go_package = "./";

service AlarmService {
    rpc SetAlarm (AlarmRequest) returns (AlarmResponse);
    rpc RemoveAlarm (AlarmRemoveRequest) returns (AlarmResponse);
}

message AlarmRequest {
    int32 id = 1;
    string startAt = 2;
    string endAt = 3;
    string timestamp = 4;
    repeated int32 week = 5;
    string type = 6;
    string body = 7;
    int32 uid = 8;
    bool useAlarm = 9;
}

message AlarmResponse {
    string status = 1;
}

message AlarmRemoveRequest {
   repeated int32 ids = 1;
   int32 uid = 2;
}
